fix logging, fix controllers
