# dclient/controllers/rollback.py
@@ -6,13 +6,32 @@ from dclient.util.core import get_yum_transaction_id, restart_service
 import os
 from flask import request
 
+
 def post_rollback():
+    """ Post Rollback Operation
+
+    post data
+        buildall:
+          type: boolean
+          default: False
+        deployment_id:
+          type: integer
+          example: 1
+        versionlock:
+          type: array
+          example: ["httpd-2.4.6-93.el7.centos.x86_64", "mod_perl-2.0.11-1.el7.x86_64"]
+        yum_rollback_id:
+          type: integer
+          example: 10
+    :return: response
+    """
+
     data = request.get_json()
-    app.logger.info(data)
+    app.logger.debug(data)
     headers = {"Authorization": Config.TOKEN}
-    payload = {"hostname": data["hostname"], "state": "UPDATING"}
+    payload = {"hostname": Config.HOSTNAME, "state": "UPDATING"}
     http = get_http()
-    http.patch(f"{Config.DEPLOYMENT_API_URI}/server", json=payload)
+    http.patch(f"{Config.DEPLOYMENT_API_URI}/server", headers=headers, json=payload)
 
     try:
         os.system(f"yum -y history rollback {data['yum_rollback_id']}")
@@ -20,16 +39,19 @@ def post_rollback():
             os.system(f"yum versionlock add {pkg}")
         yum_transaction_id = get_yum_transaction_id()
         yum_rollback_id = yum_transaction_id - 1
-        if "buildall" in data:
+
+        if data["buildall"]:
             os.system("sudo /var/hp/common/bin/buildall -s")
+
         restart_service("httpd.service")
         stat = os.system("/bin/systemctl status httpd.service")
         if stat != 0:
             raise Exception(stat)
 
         payload = {
+            "server_id": Config.SERVER_ID,
             "deployment_id": data["deployment_id"],
-            "action": "Update",
+            "action": "UPDATE",
             "state": "SUCCESS",
             "yum_transaction_id": yum_transaction_id,
             "yum_rollback_id": yum_rollback_id,
@@ -41,7 +63,7 @@ def post_rollback():
             json=payload,
         )
 
-        payload = {"hostname": data["hostname"], "state": "ACTIVE"}
+        payload = {"hostname": Config.HOSTNAME, "state": "ACTIVE"}
         http = get_http()
         http.patch(f"{Config.DEPLOYMENT_API_URI}/server", json=payload)
 
@@ -54,30 +76,33 @@ def post_rollback():
         }
         return response, 201
     except Exception as e:
-        payload = {"hostname": data["hostname"], "state": "ERROR"}
+        headers = {"Authorization": Config.TOKEN}
+        payload = {"hostname": Config.HOSTNAME, "state": "ERROR"}
         http = get_http()
-        http.patch(f"{Config.DEPLOYMENT_API_URI}/server", json=payload)
+        http.patch(f"{Config.DEPLOYMENT_API_URI}/server", headers=headers, json=payload)
 
         yum_transaction_id = get_yum_transaction_id()
         yum_rollback_id = yum_transaction_id - 1
 
         payload = {
+            "server_id": Config.SERVER_ID,
             "deployment_id": data["deployment_id"],
-            "action": "Update",
-            "state": "FAILED",
+            "action": "Updating RPMs",
+            "state": "FAILURE",
             "yum_transaction_id": yum_transaction_id,
             "yum_rollback_id": yum_rollback_id,
         }
         http = get_http()
         http.post(
-            f"{Config.DEPLOYMENT_API_URI}/server/history/{data['hostname']}",
+            f"{Config.DEPLOYMENT_API_URI}/server/history/{Config.HOSTNAME}",
+            headers=headers,
             json=payload,
         )
 
         response = {
             "hostname": Config.HOSTNAME,
             "status": "FAILED",
-            "message": "Deployment rollback failed.",
+            "message": "Rollback failed.",
             "exception": str(e),
         }
         return response, 409
