# dclient/controllers/rollout.py
@@ -1,5 +1,6 @@
 import os
 from flask import request
+from flask import current_app as app
 from dclient.util.config import Config
 from dclient.util.http_helper import get_http
 from dclient.util.core import (
@@ -11,10 +12,26 @@ from dclient.util.core import (
 
 
 def post_rollout():
-    data = request.get_json()
+    """ Post Rollout Operation
 
-    headers = {"Authorization": Config.TOKEN}
-    payload = {"hostname": data["hostname"], "state": "UPDATING"}
+    post data:
+        buildall: whether to run buildall with this operation or not
+          type: boolean
+          default: False
+        deployment_id: the deployment_id for the deployment that issued this operation
+          type: integer
+          example: 1
+        versionlock: an array of RPM packages to install / update
+          type: array
+          example: ["httpd-2.4.6-93.el7.centos.x86_64", "mod_perl-2.0.11-1.el7.x86_64"]
+
+    :return: response
+    """
+
+    data = request.get_json()
+    app.logger.debug(f"POST ROLLOUT: {data}")
+
+    payload = {"hostname": Config.HOSTNAME, "state": "UPDATING"}
     http = get_http()
     http.patch(f"{Config.DEPLOYMENT_API_URI}/server", json=payload)
 
@@ -23,17 +40,21 @@ def post_rollout():
             stat = os.system(f"sudo yum versionlock add {pkg}")
             if stat != 0:
                 raise Exception(stat)
+
         if not get_installed("httpd"):
             data["versionlock"].append("httpd")
         if not get_installed("mod_perl"):
             data["versionlock"].append("mod_perl")
         install_pkgs(data["versionlock"])
+
         yum_transaction_id = get_yum_transaction_id()
         yum_rollback_id = yum_transaction_id - 1
-        if "buildall" in data:
+
+        if data["buildall"]:
             stat = os.system("sudo /var/hp/common/bin/buildall -s")
             if stat != 0:
                 raise Exception(stat)
+
         restart_service("httpd.service")
         stat = os.system("systemctl status httpd.service")
         if stat != 0:
@@ -41,12 +62,13 @@ def post_rollout():
 
         payload = {
             "deployment_id": int(data["deployment_id"]),
-            "action": "Update",
+            "action": "UPDATE",
             "state": "SUCCESS",
             "output": "deployment was successful",
             "yum_transaction_id": yum_transaction_id,
             "yum_rollback_id": yum_rollback_id,
         }
+        headers = {"Authorization": Config.TOKEN}
         http = get_http()
         http.post(
             f"{Config.DEPLOYMENT_API_URI}/server/history/{data['hostname']}",
@@ -71,13 +93,16 @@ def post_rollout():
 
         yum_transaction_id = get_yum_transaction_id()
         yum_rollback_id = yum_transaction_id - 1
+
         payload = {
+            "server_id": Config.SERVER_ID,
             "deployment_id": int(data["deployment_id"]),
             "action": "Update",
             "state": "FAILED",
             "yum_transaction_id": yum_transaction_id,
             "yum_rollback_id": yum_rollback_id,
         }
+        headers = {"Authorization": Config.TOKEN}
         http = get_http()
         http.post(
             f"{Config.DEPLOYMENT_API_URI}/server/history/{data['hostname']}",
@@ -88,7 +113,7 @@ def post_rollout():
         response = {
             "hostname": Config.HOSTNAME,
             "status": "FAILED",
-            "message": "POST rollout failed.",
+            "message": "Rollout failed.",
             "exception": str(e),
         }
         return response, 409
