# dclient/controllers/update.py
@@ -4,30 +4,37 @@ from dclient.util.core import install_pkgs, restart_service
 
 import os
 from flask import request
+from flask import current_app as app
 
 
 def post_update():
     data = request.get_json()
+    app.logger.debug(f"POST UPDATE: {data}")
     try:
-        headers = {"Authorization": Config.TOKEN}
-        payload = {"hostname": data["hostname"], "state": "UPDATING"}
+        payload = {"hostname": Config.HOSTNAME, "state": "UPDATING"}
         http = get_http()
         http.patch(f"{Config.DEPLOYMENT_API_URI}/server", json=payload)
-
         for pkg in data["packages"]:
             os.system(f"sudo yum versionlock add {pkg}")
         install_pkgs(data["packages"])
-
         restart_service("dclient.service")
+        response = {
+            "hostname": Config.HOSTNAME,
+            "status": "SUCCESS",
+            "message": "Update succeeded.",
+            "exception": str(e),
+        }
+        app.logger.debug(response)
+        return response, 201
     except Exception as e:
-        headers = {"Authorization": Config.TOKEN}
-        payload = {"hostname": data["hostname"], "state": "ERROR"}
+        payload = {"hostname": Config.HOSTNAME, "state": "ERROR"}
         http = get_http()
         http.patch(f"{Config.DEPLOYMENT_API_URI}/server", json=payload)
         response = {
             "hostname": Config.HOSTNAME,
-            "status": "FAILED",
-            "message": "POST update failed.",
+            "status": "FAILURE",
+            "message": "Update failed.",
             "exception": str(e),
         }
+        app.logger.debug(response)
         return response, 409
