# dclient/openapi.yaml
@@ -66,16 +66,16 @@ paths:
       responses:
         default:
           description: successful operation
-  /upload:
+  /update:
     post:
-      summary: create an upload
-      operationId: dclient.controllers.upload.post_upload
+      summary: issue an update
+      operationId: dclient.controllers.update.post_update
       requestBody:
-        description: Create Upload object
+        description: Update a Server
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Upload'
+              $ref: '#/components/schemas/Update'
         required: true
       responses:
         default:
@@ -94,6 +94,18 @@ paths:
       responses:
         default:
           description: successful operation
+    get:
+      summary: get versionlock
+      operationId: dclient.controllers.versionlock.get_versionlock
+      responses:
+        "200":
+          description: get server's versionlock data
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/VersionLock'
 components:
   schemas:
     HealthCheck:
@@ -111,42 +123,39 @@ components:
     RollOut:
       type: object
       properties:
-        server_id:
-          type: integer
-          example: 1
+        buildall:
+          type: boolean
+          default: False
         deployment_id:
           type: integer
           example: 1
-        action:
-          type: string
-          example: UPDATE
-        output:
-          type: string
-          example: deployment was successful
-        yum_transaction_id:
-          type: integer
-          example: 1
-        yum_rollback_id:
-          type: integer
-          example: 1
+        versionlock:
+          type: array
+          example: ["httpd-2.4.6-93.el7.centos.x86_64", "mod_perl-2.0.11-1.el7.x86_64"]
     RollBack:
       type: object
       properties:
-        server_id:
-          type: integer
-          example: 1
+        buildall:
+          type: boolean
+          default: False
         deployment_id:
           type: integer
           example: 1
-        action:
+        versionlock:
+          type: array
+          example: ["httpd-2.4.6-93.el7.centos.x86_64", "mod_perl-2.0.11-1.el7.x86_64"]
+    Update:
+      type: object
+      properties:
+        packages:
+          type: array
+          example: ["dclient"]
+    VersionLock:
+      type: object
+      properties:
+        hostname:
           type: string
-          example: UPDATE
-        output:
-          type: string
-          example: deployment was successful
-        yum_transaction_id:
-          type: integer
-          example: 1
-        yum_rollback_id:
-          type: integer
-          example: 1
+          example: www0.hp.provo1.endurancemb.com
+        versionlock:
+          type: array
+          example: ["httpd-2.4.6-93.el7.centos.x86_64", "mod_perl-2.0.11-1.el7.x86_64"]
